[gd_scene load_steps=11 format=2]

[ext_resource path="res://res/fonts/charybdis/Charybdis.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/Shop.gd" type="Script" id=2]
[ext_resource path="res://res/styles/BtShopMenus.tres" type="StyleBox" id=3]
[ext_resource path="res://menus/invocations/banniere.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.180392, 0.192157, 0.34902, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.192157, 0.203922, 0.352941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 1 )

[node name="ShopMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HSplitContainer" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 70.0
dragger_visibility = 1

[node name="CenterContainer" type="CenterContainer" parent="VSplitContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 70 )

[node name="BtMenu" type="Button" parent="VSplitContainer/HBoxContainer/CenterContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 87.0
margin_bottom = 57.0
rect_min_size = Vector2( 75, 45 )
custom_fonts/font = SubResource( 1 )
text = "Menu"

[node name="Label" type="Label" parent="VSplitContainer/HBoxContainer"]
margin_left = 112.0
margin_top = 5.0
margin_right = 1024.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Shop"
align = 1
valign = 1

[node name="MainContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 90.0
margin_right = 1024.0
margin_bottom = 620.0
custom_constants/separation = 20

[node name="MenuContainer" type="HBoxContainer" parent="VSplitContainer/MainContainer"]
margin_right = 1024.0
margin_bottom = 50.0
alignment = 1

[node name="BtInvos" type="Button" parent="VSplitContainer/MainContainer/MenuContainer"]
margin_right = 253.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Invocations"

[node name="BtSkins" type="Button" parent="VSplitContainer/MainContainer/MenuContainer"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Skins"

[node name="BtWeapons" type="Button" parent="VSplitContainer/MainContainer/MenuContainer"]
margin_left = 514.0
margin_right = 767.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Weapons"

[node name="BtRessources" type="Button" parent="VSplitContainer/MainContainer/MenuContainer"]
margin_left = 771.0
margin_right = 1024.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Ressources"

[node name="Invocations" type="CenterContainer" parent="VSplitContainer/MainContainer"]
margin_top = 70.0
margin_right = 1024.0
margin_bottom = 470.0

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/MainContainer/Invocations"]
margin_left = 102.0
margin_right = 922.0
margin_bottom = 400.0

[node name="BtLeftBan" type="Button" parent="VSplitContainer/MainContainer/Invocations/HBoxContainer"]
margin_right = 56.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 6 )
text = "<"

[node name="Banniere" parent="VSplitContainer/MainContainer/Invocations/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 760.0
margin_bottom = 400.0
rect_min_size = Vector2( 700, 400 )

[node name="BtRightBan" type="Button" parent="VSplitContainer/MainContainer/Invocations/HBoxContainer"]
margin_left = 764.0
margin_right = 820.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 6 )
text = ">"

[node name="Skins" type="CenterContainer" parent="VSplitContainer/MainContainer"]
margin_top = 490.0
margin_right = 1024.0
margin_bottom = 490.0

[node name="Weapons" type="CenterContainer" parent="VSplitContainer/MainContainer"]
margin_top = 510.0
margin_right = 1024.0
margin_bottom = 510.0

[node name="Ressources" type="CenterContainer" parent="VSplitContainer/MainContainer"]
margin_top = 530.0
margin_right = 1024.0
margin_bottom = 530.0
[connection signal="resized" from="." to="." method="_on_ShopMenu_resized"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer/CenterContainer/BtMenu" to="." method="_on_BtMenu_pressed"]
[connection signal="pressed" from="VSplitContainer/MainContainer/MenuContainer/BtInvos" to="." method="_on_BtInvos_pressed"]
[connection signal="pressed" from="VSplitContainer/MainContainer/MenuContainer/BtSkins" to="." method="_on_BtSkins_pressed"]
[connection signal="pressed" from="VSplitContainer/MainContainer/MenuContainer/BtWeapons" to="." method="_on_BtWeapons_pressed"]
[connection signal="pressed" from="VSplitContainer/MainContainer/MenuContainer/BtRessources" to="." method="_on_BtRessources_pressed"]
